<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_height"
    android:orientation="horizontal"
    android:background="#388E3C"
    android:paddingLeft="@dimen/space2"
    android:paddingRight="@dimen/space2">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/author"
                tools:text="@string/placeHold"/>

        </LinearLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/space"
            android:paddingRight="@dimen/space"
            android:textSize="@dimen/text_news"
            android:gravity="center_vertical"
            android:textColor="@color/textColor"
            tools:text="@string/test_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/date"
                android:textStyle="bold"
                android:text="@string/date" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/space"
                android:textSize="@dimen/date2"
                android:textStyle="bold"
                tools:text="2014-5-23" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textSize="@dimen/date"
                android:textStyle="bold"
                android:text="@string/time" />

            <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/date2"
                android:paddingLeft="@dimen/space"
                android:textStyle="bold"
                tools:text="12:07" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>